task2/infra/modules/ec2/sg.tf
resource "aws_security_group" "CICD" {
name = "CICD sg"
description = "Allow HTTP & SSH"
ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "TCP"
    cidr_blocks      = ["0.0.0.0/0"]
  }

ingress {
    from_port        = 5001
    to_port          = 5001
    protocol         = "TCP"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}
